trybuild-qcell/src/compiletest/qcell_noalloc-14.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> src/compiletest/qcell_noalloc-14.rs:8:15
  |
8 |     is_sync::<QCell<Rc<()>>>();  // Compile fail
  |               ^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `Rc<()>`
  = note: required for `QCell<Rc<()>>` to implement `Sync`
note: required by a bound in `is_sync`
 --> src/compiletest/qcell_noalloc-14.rs:7:19
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`

error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> src/compiletest/qcell_noalloc-14.rs:8:15
  |
8 |     is_sync::<QCell<Rc<()>>>();  // Compile fail
  |               ^^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Rc<()>`
  = note: required for `QCell<Rc<()>>` to implement `Sync`
note: required by a bound in `is_sync`
 --> src/compiletest/qcell_noalloc-14.rs:7:19
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`
